tests/ui/type-alias-impl-trait/infinite-cycle-involving-weak.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/infinite-cycle-involving-weak.rs:3:10
   |
LL | type T = impl Copy;
   |          ^^^^^^^^^ cannot resolve opaque type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
